--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.daemon=false
 
 # Project
 mod_version=1.0.0-1.20.6
-maven_group=com.finndog.mst
+maven_group=com.finndog.mtr
 mod_name=MoogsTemplesReimagined
 mod_author=FinnDog
 archives_base_name=mtr
